--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.5.5",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-moment": "^0.8.2",
     "react-scripts": "2.0.5"
   },
   "scripts": {
